# skyread

./: README.md  app.py  main.py  pyproject.toml  requirements.txt
docs/: field-notes.md
docs/submission/: checklist.md  social-post.md  video-script.md
docs/superpowers/plans/: 2026-06-11-build-small-hackathon-sprint.md
examples/: sample_sounding.csv
skyread/: indices.py  interpret.py  live.py  llm.py  plot.py  sounding.py  spike.py
tests/: test_app.py  test_indices.py  test_interpret.py  test_live.py  test_llm.py  test_plot.py
