[project]
name = "skyread"
version = "0.1.0"
description = "Turn Skew-T soundings into plain-language weather advice — MetPy computes, a 0.5B LLM narrates"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=6.17.3",
    "matplotlib>=3.10.9",
    "metpy>=1.7.1",
    "pandas>=3.0.3",
    "siphon>=0.10.0",
    "torch>=2.11.0",
    # >=4.51 for the qwen3 architecture. NOTE: this drops MiniCPM3 support
    # (its remote code needs 4.46.x) — see PROGRESS notes, 2026-06-11.
    "transformers>=4.51",
]

# Linux boxes here run driver CUDA 12.8, but PyPI torch ships cu130-only
# builds; pull the cu128 wheels instead (macOS keeps PyPI).
# NOTE: when re-exporting requirements.txt for the HF Space, keep torch
# from PyPI (strip the download.pytorch.org lines).
# HF Spaces force-installs gradio[oauth,mcp] alongside requirements.txt, and
# the mcp extra caps pydantic at 2.12.5 — without this constraint the Space
# build fails on a resolver conflict (we don't use pydantic directly).
[tool.uv]
constraint-dependencies = ["pydantic<=2.12.5"]

[tool.uv.sources]
torch = [{ index = "pytorch-cu128", marker = "sys_platform == 'linux'" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]
